# IMD-EDB1

01-searching-algorithms/: README.md
01-searching-algorithms/source/: CMakeLists.txt
01-searching-algorithms/source/src/: searching.cpp  searching.h  timing_template.cpp
02-sorting-algorithms/: author.md
02-sorting-algorithms/source/lib/: sorting.h
03-vector/: README.md  author.md
03-vector/source/include/: vector.h
03-vector/source/tests/: main.cpp
04-list/: README.md  author.md
04-list/source/include/: list.h
04-list/source/tests/: main.cpp
05-hash-table/: author.md
05-hash-table/source/: CMakeLists.txt
05-hash-table/source/include/: hashtbl.h  hashtbl.inl
05-hash-table/source/test/: main.cpp
